# StudentsMark

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
StudentsMark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
studMark/calculate/: gpa_json.py
studMark/calculate/oneStud/: for_multi_sub.py  for_one_sub.py
studMark/calculate/oneStud/utility_modules/: mult_stud_support.py  one_stud_support.py
stud_data/calculate/: student_mark.py
stud_data/calculate/oneStud/: grading.py
stud_data/calculate/oneStud/utility/: __init__.py  file_checker.py
student/: __init__.py
student/calculate/: __init__.py  student_mark.py
student/calculate/oneStud/: __init__.py  grading.py
student/calculate/oneStud/utility/: file_checker.py  validator.py
student/calculate/one_stud/: __init__.py  grading.py
student/calculate/one_stud/utility/: __init__.py  file_checker.py  validator.py
