[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Students-Mark"
version = "0.1.0"
authors = [{ name = "Abduselam Awel", email = "abdselam676@gmail.com" }]
description = "A students mark information retrieving and calculation package."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.urls]
Homepage = "https://github.com/abdu-a01/Students-Mark.git"

[tool.black]
line-length = 88